@@ -14,6 +14,12 @@
     <packaging>jar</packaging>
 
     <properties>
+        <surefire.args>
+            -XX:+IgnoreUnrecognizedVMOptions
+              --add-reads=org.mule.runtime.extensions.soap.support=org.apache.commons.io
+            ${surefire.args.base}
+        </surefire.args>
+
         <javaModuleName>org.mule.runtime.extensions.soap.support</javaModuleName>
         <formatterConfigPath>../../formatter.xml</formatterConfigPath>
     </properties>
